--- a/index.html
+++ b/index.html
@@ -10,17 +10,30 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="#home">Home</a></li>
-          <li><a href="page2.html">Services</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="page2.html">Registation</a></li>
           <li><a href="#">Contact</a></li>
-          <li style="float: right"><a href="page1.html">Log In/ Register</a></li>
+          <li style="float: right">
+            <a href="page1.html">Log In</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <section class="information">
-        <h1>About section</h1>
-        <!-- <img src="images/MIL.Logo.png" alt="Logo"> -->
-    </section>
+    <div class="midsection">
+      <section class="information">
+        <h1>Information section</h1>
+        <img height="100px" src="images/MIL.Logo.png" alt="Logo" />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
+          harum maiores maxime quos amet aperiam tenetur ut provident deserunt
+          commodi aliquam distinctio sequi omnis repellendus quam, vitae, ullam
+          quibusdam illo?
+        </p>
+      </section>
 
+      <section class="information">
+        <h1>About section</h1>
+      </section>
+    </div>
   </body>
 </html>
