--- a/page2.html
+++ b/page2.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In Page</title>
-    <link rel="stylesheet" href="page2.css">
-</head>
-<body>
+    <link rel="stylesheet" href="page2.css" />
+  </head>
+  <body>
     <header>
       <nav>
         <ul>
           <li><a class="active" href="#home">Home</a></li>
           <li><a href="page2.html">Services</a></li>
           <li><a href="#">Contact</a></li>
-          <li style="float: right"><a href="page1.html">Log In/ Register</a></li>
+          <li style="float: right">
+            <a href="page1.html">Log In</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <section>
+
+    <!-- <section>
       <form action="#">
         <label for="userName"
           >User Name
@@ -32,14 +35,26 @@
       </form>
     </section>
     <br />
-    <hr />
-
-    <div id="box1" name="Box1">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-        repudiandae consectetur ipsa praesentium aliquid molestias dolores
-        ducimus id in! Voluptas optio sint quo natus repudiandae consequuntur
-        autem, sed provident possimus!
-      </p>
-</body>
+    <hr /> -->
+    <table>
+      <tbody>
+        <tr>
+          <td>
+            <label for="userName"
+              >User Name
+              <input type="text" name="userName" id="UserName" required />
+            </label>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="password"
+              >Password
+              <input type="password" name="password" id="password" />
+            </label>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
