--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="index.css " />
   </head>
   <body>
@@ -11,16 +11,16 @@
       <nav>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="page2.html">Registation</a></li>
+          <li><a href="page1.html">Register</a></li>
           <li><a href="#">Contact</a></li>
           <li style="float: right">
-            <a href="page1.html">Log In</a>
+            <a href="page2.html">Log In</a>
           </li>
         </ul>
       </nav>
     </header>
     <div class="midsection">
-      <section class="information">
+      <section class="information" id="tagLine">
         <h1>Information section</h1>
         <img height="100px" src="images/MIL.Logo.png" alt="Logo" />
         <p>
@@ -31,8 +31,21 @@
         </p>
       </section>
 
-      <section class="information">
+      <section class="information" id="aboutSection">
         <h1>About section</h1>
+        <article>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam hic
+          corrupti magnam id! A dicta deleniti quam nemo officia eligendi,
+          laudantium illo qui, ab dolorem libero sint itaque voluptas vitae?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rem
+          debitis amet, adipisci, temporibus delectus consectetur placeat
+          nostrum asperiores suscipit cupiditate ad nihil aspernatur nulla
+          voluptates deleniti. Veniam, nostrum velit. Lorem ipsum, dolor sit
+          amet consectetur adipisicing elit. Officia cumque sint, reprehenderit
+          ea qui, sapiente odio laborum cupiditate, eum neque delectus eaque
+          voluptatem ab officiis vitae error fugit. Dignissimos, est.
+        </article>
+       
       </section>
     </div>
   </body>
