--- a/page2.html
+++ b/page2.html
@@ -10,51 +10,42 @@
     <header>
       <nav>
         <ul>
-          <li><a class="active" href="#home">Home</a></li>
-          <li><a href="page2.html">Services</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="page1.html">Register</a></li>
           <li><a href="#">Contact</a></li>
           <li style="float: right">
-            <a href="page1.html">Log In</a>
+            <a href="page2.html">Log In</a>
           </li>
         </ul>
       </nav>
     </header>
-
-    <!-- <section>
-      <form action="#">
-        <label for="userName"
-          >User Name
-          <input type="text" name="userName" id="UserName" required />
-        </label>
-
-        <br />
-        <label for="password"
-          >Password
-          <input type="password" name="password" id="password" />
-        </label>
-      </form>
-    </section>
-    <br />
-    <hr /> -->
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            <label for="userName"
-              >User Name
-              <input type="text" name="userName" id="UserName" required />
-            </label>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <label for="password"
-              >Password
-              <input type="password" name="password" id="password" />
-            </label>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="tcontainer">
+      <table>
+        <tbody>
+          <tr>
+            <td><img width="200px" src="./images/MIL.Logo.png" alt="" /></td>
+          </tr>
+          <tr>
+            <td>
+              <label for="userName"
+                >User Name
+                <input type="text" name="userName" id="UserName" required />
+              </label>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="password"
+                >Password
+                <input type="password" name="password" id="password" />
+              </label>
+            </td>
+          </tr>
+          <tr class="pic">
+            <td><img width="200px" src="./images/mowing.gif" alt="" /></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
