update to forms

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
     <div class="midsection">
       <section class="information" id="tagLine">
-        <h1>Information section</h1>
-        <img height="100px" src="images/MIL.Logo.png" alt="Logo" />
+        <h1 style="color: green">Moment Investors LLC</h1>
+        <img height="200px" src="images/MIL.Logo.png" alt="Logo" />
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
           harum maiores maxime quos amet aperiam tenetur ut provident deserunt
@@ -32,8 +32,8 @@
       </section>
 
       <section class="information" id="aboutSection">
-        <h1>About section</h1>
-        <article>
+        <h1 style="color: green">Mission Statement:</h1>
+        <article style="width: 90%">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam hic
           corrupti magnam id! A dicta deleniti quam nemo officia eligendi,
           laudantium illo qui, ab dolorem libero sint itaque voluptas vitae?
@@ -45,7 +45,6 @@
           ea qui, sapiente odio laborum cupiditate, eum neque delectus eaque
           voluptatem ab officiis vitae error fugit. Dignissimos, est.
         </article>
-       
       </section>
     </div>
   </body>
